Refactored.Package names made consistent.

--- a/elevator/pom.xml
+++ b/elevator/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.intuit</groupId>
 	<artifactId>elevator</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>elevator</name>
@@ -27,4 +27,5 @@
 			<version>4.0</version>
 		</dependency>
 	</dependencies>
+	
 </project>
